# data-experiments

./: .gitignore  README.md  astropy_table_test.ipynb  check_fits_cube.py  check_hdf5_file.py  example_cut_and_write_data.py  example_image.py  fits_input.ipynb  hdf5_input.ipynb  hdf5_split.ipynb  pyproject.toml  test_3d.ipynb  test_ascii_read.ipynb  test_export.ipynb  test_export_2.ipynb  test_fits2hdf.ipynb  test_lettura.ipynb  test_noise.ipynb  test_yt.ipynb
old_tests/: ScreenCamera_2025-06-18-17-46-53.json  test_3d.ipynb  test_CRISM.ipynb  test_export_2.ipynb  test_fits2hdf.ipynb  test_hdf5_splitvec.ipynb  test_lettura.ipynb  test_read_hdf5_cat.ipynb  test_yt.ipynb
