[project]
name = "pynbody-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "galpak>=1.35.2",
    "h5py>=3.12.1",
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "open3d>=0.19.0",
    "pandas>=2.2.3",
    "pynbody>=2.0.0",
    "spectral-cube>=0.6.6",
]
